# pytest-latin-hypercube

./: .buildinfo  .gitignore  .gitmodules  LICENSE  genindex.html  index.html  maths.html  modules.html  objects.inv  pyproject.toml  pytest_latin_hypercube.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  maths.doctree  modules.doctree  pytest_latin_hypercube.doctree
.github/workflows/: main.yml
_sources/: index.rst.txt  maths.rst.txt
docs/: Makefile  README.md
docs/source/: conf.py  index.rst  maths.rst  modules.rst  pytest_latin_hypercube.rst  refs.bib  requirements.txt
m4r/: latinhypercube.py
pytest_latin_hypercube/: __init__.py  latin_hypercube.py  latinhypercube.py
tests/: test_latinhypercube.py  test_pytest.py
